--- a/activities/style.css
+++ b/activities/style.css
@@ -139,6 +139,7 @@
         color: transparent;
         position: absolute;
         right: 0%;
+        opacity: 0.01;
     }
 }
 @media only screen and (max-width:920px){
