--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@
         align-items: center;
         height: 100px;
         margin: 0px;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 1000;
     }
     .nav h2{
         color: #ffff;
